modificado los archivos para la versión online que ya está subida

--- a/core/themes/minimal/style.css
+++ b/core/themes/minimal/style.css
@@ -846,6 +846,7 @@ otras páginas
   text-align: center;
   text-transform: uppercase;
   font-size: 250%;
-  margin-bottom: 50px; }
+  margin-bottom: 50px;
+  line-height: 124%; }
 
 /*# sourceMappingURL=style.css.map */
