--- a/core/themes/minimal/sass/style.scss
+++ b/core/themes/minimal/sass/style.scss
@@ -39,6 +39,14 @@ html, body {
     align-items: center;
 }
 
+.img-loader-ajax {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50px;
+    margin-bottom: 50px;
+    display: none;
+}
+
 //header
 .main-header {
     position: relative;
