--- a/core/themes/minimal/style.css
+++ b/core/themes/minimal/style.css
@@ -97,6 +97,13 @@ html, body {
   justify-content: center;
   align-items: center; }
 
+.img-loader-ajax {
+  margin-left: auto;
+  margin-right: auto;
+  width: 50px;
+  margin-bottom: 50px;
+  display: none; }
+
 .main-header {
   position: relative;
   background-color: #fff;
