--- a/core/themes/minimal/sass/footer.scss
+++ b/core/themes/minimal/sass/footer.scss
@@ -3,14 +3,18 @@
     overflow: auto;
     background-color: #000;
     color: #fff;
-    padding: 0% 10%;
+    padding: 1% 10%;
     width: 100%;
     box-shadow: 1px 1px 5px #333;
-    
+
     @media (max-width: 1400px) {
-        padding: 0% 5%;
+        padding: 2% 5%;
     }
-    
+
+    @media (max-width: 960px) {
+        padding: 3% 5%;
+    }
+
     h5 {
         float: left;
         margin: 2% 0;
@@ -28,10 +32,10 @@
             margin-right: 10px;
         }
     }
-    
+
     @media (max-width: 440px) {
             display: none;
-        } 
+        }
 }
 
 .red-icon {
@@ -62,4 +66,3 @@
 .red-icon-behance {background-position: -310px 2px}
 .red-icon-snapchat {background-position: -344px 2px}
 .red-icon-instagram {background-position: -378px 2px}
-
