--- a/core/themes/minimal/sass/style.scss
+++ b/core/themes/minimal/sass/style.scss
@@ -5,7 +5,7 @@ Description: A minimalistic WordPress theme for LaCueva.tv.
 Version: 1.0
 Author: LaCueva.tv
 Author URI: http://lacueva.tv/
-Tags: Licensed under GPL. 
+Tags: Licensed under GPL.
 */
 
 /*Lacueva.tv - style*/
@@ -19,7 +19,7 @@ html, body {
     font-weight: 300;
     color: #333;
     background-color: #ececec;
-    
+
     @media (max-width: 768px) {
         background-color: #fff;
     }
@@ -58,13 +58,13 @@ html, body {
     padding-left: 10%;
     padding-right: 10%;
     box-shadow: 1px 1px 5px #999;
-    
+
     @media (max-width: 1400px) {
         padding-left: 5%;
         padding-right: 5%;
         height: 160px;
     }
-    
+
     @media (max-width: 768px) {
         padding-left: 0;
         padding-right: 0;
@@ -79,16 +79,16 @@ html, body {
     padding: 10px;
     padding-left: 0;
     height: 200px;
-    
+
     @media (max-width: 1440px) {
         height: 150px;
         padding: 0;
     }
-    
+
     @media (max-width: 1200px) {
         width: 50%;
     }
-    
+
     @media (max-width: 768px) {
         background-color: rgba(0,0,0,0.5);
         color: #fff;
@@ -101,17 +101,17 @@ html, body {
         padding-left: 20px;
         padding-top: 40px;
     }
-    
+
     h4 {
         font-size: 150%;
         margin: 20px 0;
     }
-    
+
     h2 {
         font-size: 300%;
         margin: 40px 0;
         text-transform: uppercase;
-        
+
         @media (max-width: 1440px) {
             margin: 30px 0;
         }
@@ -125,15 +125,15 @@ html, body {
     max-width: 600px;
     background: url(../minimal/images/olu_eletu1440.jpg) no-repeat;
     background-size: 100% 100%;
-    
+
     @media (max-width: 1440px) {
         height: 150px;
     }
-    
+
     @media (max-width: 1200px) {
         width: 50%;
     }
-    
+
     @media (max-width: 768px) {
         float: none;
         position: absolute;
@@ -157,24 +157,24 @@ html, body {
     strong {
         font-style: italic;
     }
-    
+
     @media (max-width: 1800px) {
         font-size: 120%;
     }
-    
+
     @media (max-width: 1600px) {
         font-size: 110%;
     }
-    
+
     @media (max-width: 1440px) {
         height: 150px;
         font-size: 100%;
         line-height: 140%;
         padding: 15px;
     }
-    
+
     @media (max-width: 1200px) {
-        display: none;    
+        display: none;
     }
 }
 
@@ -185,7 +185,7 @@ nav {
 }
 
 .main-menu {
-    
+
     @media (max-width: 768px) {
         display: none;
         width: 100%;
@@ -197,15 +197,15 @@ nav {
         background-color: rgba(0,0,0,0.6);
         padding: 25px 0;
     }
-    
+
     li {
         display: inline-block;
         margin: 0 5px;
         border-right: solid #999 1px;
         padding-right: 10px;
-        
+
         &:last-child {border: none;}
-        
+
         a {
             font-size: 80%;
             &:hover {
@@ -220,15 +220,15 @@ nav {
             margin: 0;
             border-right: none;
             text-align: center;
-            
+
             a {
                 font-size: 100%;
                 display: block;
                 padding: 8px 25px;
             }
-        }    
+        }
     }//cierre lista
-    
+
 }//cierre ul .main-menu
 @keyframes menu-fade-in {
     from {opacity: 0}
@@ -255,13 +255,13 @@ nav {
     cursor: pointer;
     background-color: transparent;
     z-index: 1111;
-    
+
     &:hover {
         opacity: 0.6;
     }
-    
+
     @media (max-width: 768px) {
-        display: inline-block; 
+        display: inline-block;
     }
 }
 
@@ -314,7 +314,7 @@ nav {
   from {
     right: -50px; }
   to {
-    right: -3px; } 
+    right: -3px; }
 }
 .up-nav {
   display: none;
@@ -364,15 +364,15 @@ nav {
 .wrapper {
     clear: both;
     padding: 80px 10%;
-    
+
     @media (max-width: 1400px) {
         padding: 80px 5%;
     }
-    
+
     @media (max-width: 768px) {
         padding: 0;
     }
-    
+
 }
 
 .content-header {
@@ -380,7 +380,7 @@ nav {
     text-transform: uppercase;
     font-size: 250%;
     margin-bottom: 50px;
-    
+
     @media (max-width: 768px) {
         display: none;
     }
@@ -402,11 +402,11 @@ nav {
     -webkit-justify-content: center;
     flex-flow: row wrap;
     -webkit-flex-flow: row wrap;
-    
+
     @media (max-width: 1200px) {
         display: initial;
     }
-    
+
 }
 
 .trabajo-item {
@@ -419,13 +419,13 @@ nav {
     box-shadow: 1px 1px 5px #999;
     flex-basis: 28%;
     -webkit-flex-basis: 28%;
-    
+
     @media (max-width: 1200px) {
         display: inline-block;
         width: 100%;
         margin: 50px 0;
     }
-    
+
     @media (max-width: 768px) {
         margin: 0;
         margin-bottom: 80px;
@@ -437,7 +437,7 @@ nav {
     position: relative;
     padding: 20px;
     text-align: left;
-    
+
     @media (max-width: 768px) {
         padding: 40px;
     }
@@ -449,7 +449,7 @@ nav {
     text-decoration: underline;
     font-weight: 700;
     margin-bottom: 20px;
-    
+
     @media (max-width: 1200px) {
         display: inline-block;
         width: 50%;
@@ -460,13 +460,13 @@ nav {
     font-size: 70%;
     text-transform: uppercase;
     margin-bottom: 20px;
-    font-style: italic; 
-    
+    font-style: italic;
+
     @media (max-width: 1200px) {
         display: block;
         width: 50%;
     }
-    
+
     @media (max-width: 768px) {
         width: 100%;
     }
@@ -476,20 +476,20 @@ nav {
     font-size: 80%;
     line-height: 110%;
     letter-spacing: 0.4px;
-    
+
     strong {
         font-weight: 700;
     }
-    
+
     em {
         font-style: italic;
     }
-    
+
     @media (max-width: 1200px) {
         display: inline-block;
         width: 50%;
     }
-    
+
     @media (max-width: 768px) {
         display: inherit;
         width: 100%;
@@ -503,11 +503,11 @@ nav {
     color: #666;
     line-height: 120%;
     font-style: italic;
-    
+
     &:hover{
         text-decoration: underline;
     }
-    
+
 }
 
 .trabajo-imagen {
@@ -515,7 +515,7 @@ nav {
     max-width: 480px;
     margin: 20px auto;
     height: auto;
-    
+
     @media (max-width: 1200px) {
         display: inline-block;
         width: 35%;
@@ -524,12 +524,12 @@ nav {
         margin-top: -50px;
         margin-right: 5%;
     }
-    
+
     @media (max-width: 850px) {
         width: 40%;
         margin-right: 5%;
     }
-    
+
     @media (max-width: 768px) {
         display: inherit;
         width: 100%;
@@ -543,13 +543,13 @@ nav {
     font-size: 70%;
     line-height: 100%;
     text-align: right;
-    
+
     @media (max-width: 1200px) {
         position: absolute;
         top: 25px;
         left: 40%;
     }
-    
+
     @media (max-width: 768px) {
         position: static;
     }
@@ -569,19 +569,19 @@ nav {
     font-size: 90%;
     box-shadow: 1px 1px 1px #333;
     transition: all 0.2s;
-    
+
     &:hover {
         background-color: #555;
         color: #fff;
         font-size: 100%;
     }
-    
+
     @media (max-width: 1200px) {
         position: static;
         width: 150px;
         margin-top: 25px;
     }
-    
+
     @media (max-width: 768px) {
         position: absolute;
         bottom: -34px;
@@ -606,7 +606,7 @@ nav {
     border: none;
     cursor: pointer;
     transition: all 0.1s;
-    
+
     &:hover {
         background-color: #555;
         color: #fff;
@@ -627,12 +627,12 @@ otras páginas
 .not-found {
     padding: 100px 20px;
     text-align: center;
-    
+
     h1 {
         font-size: 200%;
         margin-bottom: 50px;
     }
-    
+
     p {
         margin-bottom: 50px;
     }
@@ -650,6 +650,10 @@ otras páginas
 	font-size: 70%;
     line-height: 100%;
     text-align: right;
+
+    @media (max-width: 768px) {
+      font-size: 100%;
+    }
 }
 
 .btn-online {
@@ -660,21 +664,95 @@ otras páginas
     font-size: 90%;
     box-shadow: 1px 1px 1px #333;
     margin-top:30px;
-    display: inline-block;	
-    
+    display: inline-block;
+
     &:hover {
 	   color:#999;
     }
+
+    @media (max-width: 768px) {
+      font-size: 120%;
+      width: 50%;
+      text-align: center;
+    }
+
 }
+
+.entri-titulo {
+  margin-top: 20px;
+  font-size: 24px;
+  display: inline-block;
+  border-bottom: 1px solid #333;
+  padding-bottom: 5px;
+}
+
+.entri-tags {
+  text-transform: uppercase;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  font-style: italic;
+}
+
+.entri-text {
+  width: 50%;
+  float: left;
+
+  @media (max-width: 768px) {
+    float: none;
+    width: 100%;
+  }
+}
+
+.entri-text p {
+  font-size: 18px;
+  line-height: 24px;
+  padding: 20px 10px;
+}
+
+.entri-figure {
+  width: 50%;
+  float: left;
+  margin-top: -50px;
+
+  @media (max-width: 768px) {
+    float: none;
+    width: 100%;
+    margin-top: 20px;
+  }
+}
+
+.entri-img {
+  width: 100%;
+  height: auto;
+
+  @media (max-width: 768px) {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+
+//navegacion entre posts
 
 .post-navigation {
 	display: block;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
 	padding: 50px 0;
 	overflow: auto;
-    
+
     h2 {
         font-size: 150%;
-        margin: 20px 0;
+        text-align: center;
+        color: #333;
+        margin-bottom: 20px;
+    }
+    //no muestra la navegacion
+    @media (max-width: 768px) {
+      display: none;
     }
 }
 
@@ -682,17 +760,18 @@ otras páginas
     .nav-next {
         display: block;
         width: 40%;
+        text-transform: uppercase;
         margin: 10px 5%;
-        float: right;
-        text-align: right;
-        
-        &:after {
-            content: ">";
-            margin-left: 10px;
+        float: left;
+        text-align: left;
+
+        &:before {
+            content: "<";
+            margin-right: 10px;
         }
-        
+
         a {
-            text-decoration: underline; 
+            text-decoration: underline;
         }
     }
 }
@@ -701,17 +780,18 @@ otras páginas
     .nav-previous {
         display: block;
         width: 40%;
+        text-transform: uppercase;
         margin: 10px 5%;
-        float: left;
-        text-align: left;
-        
-        &:before {
-            content: "<";
-            margin-right: 10px;
+        float: right;
+        text-align: right;;
+
+        &:after {
+            content: ">";
+            margin-left: 10px;
         }
-        
+
         a {
-            text-decoration: underline; 
+            text-decoration: underline;
         }
     }
 }
@@ -724,7 +804,7 @@ otras páginas
 .single-page {
 	padding: 50px 20px;
     background: #fff;
-    box-shadow: 1px 1px 5px #999; 
+    box-shadow: 1px 1px 5px #999;
 }
 
 .page-titulo {
