--- a/core/themes/minimal/sass/footer.scss
+++ b/core/themes/minimal/sass/footer.scss
@@ -8,16 +8,16 @@
     box-shadow: 1px 1px 5px #333;
 
     @media (max-width: 1400px) {
-        padding: 2% 5%;
+        padding: 1% 5%;
     }
 
     @media (max-width: 960px) {
-        padding: 3% 5%;
+        padding: 1% 5%;
     }
 
     h5 {
         float: left;
-        margin: 2% 0;
+        margin: 1% 0;
         font-size: 14px;
     }
     p {
@@ -30,6 +30,10 @@
         li {
             display: inline-block;
             margin-right: 10px;
+        }
+
+        @media (max-height: 630px) {
+          margin: 0;
         }
     }
 
