--- a/core/themes/minimal/sass/style.scss
+++ b/core/themes/minimal/sass/style.scss
@@ -151,7 +151,7 @@ html, body {
     line-height: 150%;
     font-size: 130%;
     margin-right: 40px;
-    border: 1px #999 solid;
+    //border: 1px #999 solid;
     height: 190px;
     font-style: normal;
     strong {
@@ -747,8 +747,10 @@ otras páginas
     h2 {
         font-size: 150%;
         text-align: center;
-        color: #333;
+        color: #666;
         margin-bottom: 20px;
+        text-transform: uppercase;
+        font-weight: 700;
     }
     //no muestra la navegacion
     @media (max-width: 768px) {
