--- a/core/themes/minimal/style.css
+++ b/core/themes/minimal/style.css
@@ -191,7 +191,6 @@ html, body {
   line-height: 150%;
   font-size: 130%;
   margin-right: 40px;
-  border: 1px #999 solid;
   height: 190px;
   font-style: normal; }
   .presentacion strong {
@@ -873,8 +872,10 @@ otras páginas
   .post-navigation h2 {
     font-size: 150%;
     text-align: center;
-    color: #333;
-    margin-bottom: 20px; }
+    color: #666;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-weight: 700; }
   @media (max-width: 768px) {
     .post-navigation {
       display: none; } }
