listo para probar online

--- a/core/themes/minimal/sass/style.scss
+++ b/core/themes/minimal/sass/style.scss
@@ -393,202 +393,7 @@ nav {
     letter-spacing: 1px;
 }
 
-//items trabajos
-.trabajos-items {
-    text-align: center;
-    display: flex;
-    display: -webkit-flex;
-    -webkit-align-items: stretch;
-    -webkit-justify-content: center;
-    flex-flow: row wrap;
-    -webkit-flex-flow: row wrap;
-
-    @media (max-width: 1200px) {
-        display: initial;
-    }
-
-}
-
-.trabajo-item {
-    background-color: #fff;
-    width: 29%;
-    display: flex;
-    display:-webkit-flex;
-    vertical-align: top;
-    margin: 50px 2%;
-    box-shadow: 1px 1px 5px #999;
-    flex-basis: 28%;
-    -webkit-flex-basis: 28%;
-
-    @media (max-width: 1200px) {
-        display: inline-block;
-        width: 100%;
-        margin: 50px 0;
-    }
-
-    @media (max-width: 768px) {
-        margin: 0;
-        margin-bottom: 80px;
-        box-shadow: none;
-    }
-}
-
-.trabajo {
-    position: relative;
-    padding: 20px;
-    text-align: left;
-
-    @media (max-width: 768px) {
-        padding: 40px;
-    }
-}
-
-.trabajo-titulo {
-    font-size: 100%;
-    line-height: 120%;
-    text-decoration: underline;
-    font-weight: 700;
-    margin-bottom: 20px;
-
-    @media (max-width: 1200px) {
-        display: inline-block;
-        width: 50%;
-    }
-}
-
-.trabajo-tags {
-    font-size: 70%;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    font-style: italic;
-
-    @media (max-width: 1200px) {
-        display: block;
-        width: 50%;
-    }
-
-    @media (max-width: 768px) {
-        width: 100%;
-    }
-}
-
-.trabajo-descripcion {
-    font-size: 80%;
-    line-height: 110%;
-    letter-spacing: 0.4px;
-
-    strong {
-        font-weight: 700;
-    }
-
-    em {
-        font-style: italic;
-    }
-
-    @media (max-width: 1200px) {
-        display: inline-block;
-        width: 50%;
-    }
-
-    @media (max-width: 768px) {
-        display: inherit;
-        width: 100%;
-        font-size: 90%;
-    }
-}
-
-.trabajo-more-btn {
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #666;
-    line-height: 120%;
-    font-style: italic;
-
-    &:hover{
-        text-decoration: underline;
-    }
-
-}
-
-.trabajo-imagen {
-    width: 100%;
-    max-width: 480px;
-    margin: 20px auto;
-    height: auto;
-
-    @media (max-width: 1200px) {
-        display: inline-block;
-        width: 35%;
-        max-width: 300px;
-        float: right;
-        margin-top: -50px;
-        margin-right: 5%;
-    }
-
-    @media (max-width: 850px) {
-        width: 40%;
-        margin-right: 5%;
-    }
-
-    @media (max-width: 768px) {
-        display: inherit;
-        width: 100%;
-        max-width: 480px;
-        float: none;
-        margin: 20px auto;
-    }
-}
-
-.trabajo-fecha {
-    font-size: 70%;
-    line-height: 100%;
-    text-align: right;
-
-    @media (max-width: 1200px) {
-        position: absolute;
-        top: 25px;
-        left: 40%;
-    }
-
-    @media (max-width: 768px) {
-        position: static;
-    }
-}
-
-.trabajo-btn {
-    position: absolute;
-    bottom: -34px;
-    left: 0;
-    display: block;
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-    background-color: #333;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 90%;
-    box-shadow: 1px 1px 1px #333;
-    transition: all 0.2s;
-
-    &:hover {
-        background-color: #555;
-        color: #fff;
-        font-size: 100%;
-    }
-
-    @media (max-width: 1200px) {
-        position: static;
-        width: 150px;
-        margin-top: 25px;
-    }
-
-    @media (max-width: 768px) {
-        position: absolute;
-        bottom: -34px;
-        left: 0;
-        width: 100%;
-    }
-}
+@import 'trabajos';
 
 .btn-mastrabajos {
     display: inline-block;
@@ -638,181 +443,11 @@ otras páginas
     }
 }
 
-//single post:
+//single post (tarifa y trabajos y navegacion post siguiente)
+@import 'single';
 
-.trabajo-single {
-	background-color: #fff;
-	padding: 20px;
-	position: relative;
-}
+//single-page, pagina standard:
+@import 'pages';
 
-.content-footer-single {
-	font-size: 70%;
-    line-height: 100%;
-    text-align: right;
-
-    @media (max-width: 768px) {
-      font-size: 100%;
-    }
-}
-
-.btn-online {
-    padding: 10px;
-    background-color: #333;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 90%;
-    box-shadow: 1px 1px 1px #333;
-    margin-top:30px;
-    display: inline-block;
-
-    &:hover {
-	   color:#999;
-    }
-
-    @media (max-width: 768px) {
-      font-size: 120%;
-      width: 50%;
-      text-align: center;
-    }
-
-}
-
-.entri-titulo {
-  margin-top: 20px;
-  font-size: 24px;
-  display: inline-block;
-  border-bottom: 1px solid #333;
-  padding-bottom: 5px;
-}
-
-.entri-tags {
-  text-transform: uppercase;
-  margin-top: 50px;
-  margin-bottom: 30px;
-  font-style: italic;
-}
-
-.entri-text {
-  width: 50%;
-  float: left;
-
-  @media (max-width: 768px) {
-    float: none;
-    width: 100%;
-  }
-}
-
-.entri-text p {
-  font-size: 18px;
-  line-height: 24px;
-  padding: 20px 10px;
-}
-
-.entri-figure {
-  width: 50%;
-  float: left;
-  margin-top: -50px;
-
-  @media (max-width: 768px) {
-    float: none;
-    width: 100%;
-    margin-top: 20px;
-  }
-}
-
-.entri-img {
-  width: 100%;
-  height: auto;
-
-  @media (max-width: 768px) {
-    width: 80%;
-    display: block;
-    margin: 0 auto;
-  }
-}
-
-
-//navegacion entre posts
-
-.post-navigation {
-	display: block;
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20px;
-	padding: 50px 0;
-	overflow: auto;
-
-    h2 {
-        font-size: 150%;
-        text-align: center;
-        color: #666;
-        margin-bottom: 20px;
-        text-transform: uppercase;
-        font-weight: 700;
-    }
-    //no muestra la navegacion
-    @media (max-width: 768px) {
-      display: none;
-    }
-}
-
-.nav-links {
-    .nav-next {
-        display: block;
-        width: 40%;
-        text-transform: uppercase;
-        margin: 10px 5%;
-        float: left;
-        text-align: left;
-
-        &:before {
-            content: "<";
-            margin-right: 10px;
-        }
-
-        a {
-            text-decoration: underline;
-        }
-    }
-}
-
-.nav-links {
-    .nav-previous {
-        display: block;
-        width: 40%;
-        text-transform: uppercase;
-        margin: 10px 5%;
-        float: right;
-        text-align: right;;
-
-        &:after {
-            content: ">";
-            margin-left: 10px;
-        }
-
-        a {
-            text-decoration: underline;
-        }
-    }
-}
-
-//single-pages:
-.brand-name-page {
-	margin: 50px 0!important;
-}
-
-.single-page {
-	padding: 50px 20px;
-    background: #fff;
-    box-shadow: 1px 1px 5px #999;
-}
-
-.page-titulo {
-	text-align: center;
-  	text-transform: uppercase;
-  	font-size: 250%;
-  	margin-bottom: 50px;
-    line-height: 124%;
-}
+//estilo del shortcode [tarifas]
+@import 'tarifas';
