--- a/core/themes/minimal/sass/trabajos.scss
+++ b/core/themes/minimal/sass/trabajos.scss
@@ -108,6 +108,8 @@
     color: #666;
     line-height: 120%;
     font-style: italic;
+    display: block;
+    margin-top: 10px;
 
     &:hover{
         text-decoration: underline;
