--- a/core/themes/minimal/sass/single.scss
+++ b/core/themes/minimal/sass/single.scss
@@ -34,7 +34,35 @@
       width: 50%;
       text-align: center;
     }
+}
 
+.btns-tarifa-trabajos-single  {
+	li {
+		display: inline-block;
+		margin: 0 10px;
+	}
+}
+
+.btn-tarifa-single, .btn-trabajos-single {
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 90%;
+    box-shadow: 1px 1px 1px #333;
+    margin-top:30px;
+    display: block;
+		width: 100px;
+		clear: both;
+		text-align: center;
+
+    &:hover {
+	   color:#999;
+    }
+
+    @media (max-width: 768px) {
+      display: none;
+    }
 }
 
 .entry-content {
@@ -47,6 +75,7 @@
   display: inline-block;
   border-bottom: 1px solid #333;
   padding-bottom: 5px;
+	line-height: 130%;
 
   @media (max-width: 768px) {
     font-size: 250%;
@@ -65,10 +94,15 @@
   width: 50%;
   float: left;
 
-  @media (max-width: 768px) {
+  @media (max-width: 960px) {
     float: none;
     width: 100%;
+		padding: 5%;
   }
+}
+
+blockquote {
+	font-style: italic;
 }
 
 .entri-text p {
@@ -92,19 +126,43 @@
     em {
       font-size: 70%;
     }
-}
+	}
 }
 
-.entri-figure {
-  width: 50%;
-  float: left;
-  margin-top: -50px;
+.tarifa-en-single {
+	font-size: 130%;
+  font-weight: 700;
+  margin: 30px 0;
+  line-height: 150%;
 
-  @media (max-width: 768px) {
-    float: none;
-    width: 100%;
-    margin-top: 20px;
+  &:before {
+    content: 'Desde AR$';
+    margin-right:10px;
   }
+}
+
+.terminos-y-condiciones-link {
+    font-size: 70%;
+}
+
+.col-right-img {
+	width: 40%;
+  float: right;
+  padding: 1%;
+
+	@media (max-width: 1200px) {
+		width: 45%;
+	}
+
+  @media (max-width: 960px) {
+    float: none;
+    width: 80%;
+		margin: 50px auto;
+    padding: 0 4%;
+  }
+}
+.entri-figure {
+	padding: 1%;
 }
 
 .entri-img {
@@ -112,7 +170,7 @@
   height: auto;
 
   @media (max-width: 768px) {
-    width: 80%;
+    width: 100%;
     display: block;
     margin: 0 auto;
   }
@@ -189,19 +247,20 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
+    margin-top: 30px;
     width: 200px;
     text-align: center;
     padding: 10px;
-    background-color: #333;
-    color: #fff;
+    //background-color: #333;
+    color: #333;
+		border: 1px solid #333;
     text-transform: uppercase;
     font-size: 70%;
     font-family: 'Raleway', sans-serif;
-    box-shadow: 1px 1px 1px #333;
+    //box-shadow: 1px 1px 1px #333;
     font-weight: 300;
     margin-bottom: 50px;
-    border: none;
+    //border: none;
     cursor: pointer;
     transition: all 0.1s;
 
