--- a/promo/sass/btn.scss
+++ b/promo/sass/btn.scss
@@ -25,3 +25,41 @@
         padding: 15px 25px;
     }
 }
+
+.btn-clasico {
+    background-color: $negro-transparente;
+    color: $blanco;
+    display: block;
+    font-size: 100%;
+    padding: 10px 25px;
+    text-align: center;
+    box-shadow: 0px 0px 4px $negro-btn;
+}
+
+.btn-mastrabajos {
+    display: inline-block;
+    width: 200px;
+    text-align: center;
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 70%;
+    font-family: 'Raleway', sans-serif;
+    box-shadow: 1px 1px 1px #333;
+    font-weight: 300;
+    margin-bottom: 50px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.1s;
+
+    &:hover {
+        background-color: #555;
+        color: #fff;
+        font-style: italic;
+    }
+
+    @media (max-width: $mq-tablet) {
+            display: none;
+        }
+}
